# portfolio

./: .gitignore  .npmrc  ACTION_PLAN_SETUP.md  API_ENDPOINTS.md  ARCHITECTURE_DIAGRAM.md  CHATBOT_CAPABILITIES_ANALYSIS.md  CHAT_PERSISTENCE_COMPLETE.md  CHAT_PERSISTENCE_FINAL_GUIDE.md  CHAT_PERSISTENCE_QUICK_REF.md  DATA_FLOW_DEBUGGING.md  DEPLOYMENT_TESTING_CHECKLIST.md  FIX_NO_DATABASE_ENTRIES.md  IMPLEMENTATION_SUMMARY.md  MULTI_PROJECT_SEARCH_FIX.md  OPTIONAL_CLEAR_HISTORY_BUTTON.md  PERSISTENCE_IMPLEMENTATION_COMPLETE.md  README_CHAT_PERSISTENCE.md  SETUP_DATABASE_VISUAL_GUIDE.md  SPECIFIC_PROJECT_QUESTIONS.md  SUPABASE_ANON_AUTH_IMPLEMENTATION.md  SUPABASE_ANON_AUTH_README.md  SUPABASE_ANON_AUTH_SETUP_QUICK.md  SUPABASE_DATA_NOT_SAVING_FIX.md  SUPABASE_GUIDES_INDEX.md  SUPABASE_QUICK_START.md  VISUAL_TROUBLESHOOTING.md  WHY_DATA_NOT_SAVING.md  about.html  contact.html  index.html  netlify.toml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  skills.html  tailwind.config.js  todo.md
backend/: .vercelignore  ANONYMOUS_USERS_TABLE_SETUP.sql  BOTH_ISSUES_FIXED.md  CHATBOT_README.md  CHAT_HISTORY_PERSISTENCE.md  DEPLOYMENT.md  FIXES_QUICK_REFERENCE.md  FIX_PYDANTIC_ENUM_VALIDATION.md  FIX_VECTOR_DB_JSON_ERROR.md  IMPLEMENTATION_GUIDE.md  README.md  RELEVANCE_FILTER_IMPLEMENTATION.md  RELEVANCE_FILTER_QUICK_REF.md  SUPABASE_SETUP.md  VECTOR_DB_INTEGRATION_COMPLETE.md  VECTOR_DB_RELEVANCE_FILTER.md  VECTOR_DB_SETUP.md  VECTOR_DB_TROUBLESHOOTING.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  verify_supabase_setup.py
(+108 files in other folders)
